--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,8 @@
 name = "rustache"
 version = "0.0.1"
 authors = ["Jarrod Ruhland <jarrod.ruhland@gmail.com>"]
+
+[lib]
+
+name = "rustache"
+path = "src/lib.rs"
