--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ authors = ["Jarrod Ruhland <jarrod.ruhland@gmail.com>"]
 
 name = "rustache"
 path = "src/lib.rs"
+
+[dependencies.memstream]
+git = "https://github.com/seanchen1991/rust-memstream.git"
