--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,31 @@
-language: rust
-script:
-  - cargo test
 sudo: false
+language: rust
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+rust:
+  - nightly
+  - beta
+  - stable
+  - 1.3.0
+matrix:
+  allow_failures:
+    - rust: nightly
+before_script:
+  - |
+      pip install 'travis-cargo<0.2' --user &&
+      export PATH=$HOME/.local/bin:$PATH
+script:
+  - |
+      travis-cargo build &&
+      travis-cargo test &&
+      travis-cargo bench &&
+      travis-cargo --only stable doc
+after_success:
+  - travis-cargo --only stable doc-upload
+env:
+  global:
+    secure: FILL_ME_IN
