update path to documentation
The path of the documentation changed with Travis building this so this
updates the location of the documentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ authors = ["Jarrod Ruhland <jarrod.ruhland@gmail.com>",
 
 description = "Mustache templating engine for rust"
 license = "MIT"
+documentation = "https://rustache.github.io/rustache/"
+repository = "https://github.com/rustache/rustache.git"
 
 [lib]
 
