--- a/.travis.yml
+++ b/.travis.yml
@@ -3,29 +3,29 @@ language: rust
 addons:
   apt:
     packages:
-      - libcurl4-openssl-dev
-      - libelf-dev
-      - libdw-dev
+    - libcurl4-openssl-dev
+    - libelf-dev
+    - libdw-dev
 rust:
-  - nightly
-  - beta
-  - stable
-  - 1.3.0
+- nightly
+- beta
+- stable
+- 1.3.0
 matrix:
   allow_failures:
-    - rust: nightly
+  - rust: nightly
 before_script:
-  - |
-      pip install 'travis-cargo<0.2' --user &&
-      export PATH=$HOME/.local/bin:$PATH
+- |
+  pip install 'travis-cargo<0.2' --user &&
+  export PATH=$HOME/.local/bin:$PATH
 script:
-  - |
-      travis-cargo build &&
-      travis-cargo test &&
-      travis-cargo bench &&
-      travis-cargo --only stable doc
+- |
+  travis-cargo build &&
+  travis-cargo test &&
+  travis-cargo bench &&
+  travis-cargo --only stable doc
 after_success:
-  - travis-cargo --only stable doc-upload
+- travis-cargo --only stable doc-upload
 env:
   global:
-    secure: FILL_ME_IN
+  - secure: vowmgrd1Bnz0uPNazdqHBFoM+Ek28qDsevGuPj/RDlLh6AWKTvD0fjndTENmh5qCJf1GPIPt0cnKIo48meaSHtzqPFi5YJVz6BPK82zM38nT3J5MYwmb78fzoDDuZoZTA4DTKT+g76XArxxRUCmonQWuCbGbkrqov4HcJwNRBX8=
