Add metadata for crates.io
Add the homepage and readme fields for crates.io metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ description = "Mustache templating engine for rust"
 license = "MIT"
 documentation = "https://rustache.github.io/rustache/"
 repository = "https://github.com/rustache/rustache.git"
+homepage = "https://rustache.github.io"
+readme = "README.md"
 
 [lib]
 
