update docs link to use docs.rs
Updated the documentation links to use docs.rs as that is going to be a
better resource. Stop uploading the docs as part of the Travis CI build
as well. fixes #157.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Jarrod Ruhland <jarrod.ruhland@gmail.com>",
 
 description = "Mustache templating engine for rust"
 license = "MIT"
-documentation = "https://rustache.github.io/rustache/"
+documentation = "https://docs.rs/rustache/"
 repository = "https://github.com/rustache/rustache.git"
 homepage = "https://rustache.github.io"
 readme = "README.md"
